[package]
name = "rust-test"
version = "0.1.0"
edition = "2021"

[lib]
name = "a26c"
path = "src/lib/mod.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-channel = "0.5.8"
thiserror = "1.0.44"
chrono = "0.4.26"
colored = "*"
parking_lot = "0.12.1"
